[package]
name = "sparse_linear_assignment"
version = "0.1.2"
authors = ["Rinat Shigapov <rinatshigapov@gmail.com>"]
edition = "2018"
description = "Solvers for sparse linear assignment problem based on the auction algorithm"
readme = "README.md"
repository = "https://github.com/DXist/sparse_linear_assignment"
license = "Apache-2.0"
keywords = ["linear-assignment", "weighted-matching", "optimization", "auction-algorithm", "sparse"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
anyhow = "1.0"
num-traits = "0.2"
num-iter = "0.1"
num-integer = { version = "0.1", optional = true }
tracing-subscriber = "0.2"
tracing = { version = "0.1", features = ["release_max_level_warn"] }


[dev-dependencies]
tracing = { version = "0.1", features = ["max_level_trace"] }
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
reservoir-sampling = "0.5"
criterion = "0.3"
generic-tests = "0.1"

[lib]
# disable libtest benchmarks
bench = false

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["khosla", "forward"]
khosla = ["num-integer"]
forward = []
